--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.8.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "d3": "^7.4.4"
+    }
 }
