--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "javascript.validate.enable": false,
-    "cSpell.words": [
-        "gentlepersons's"
-    ]
+    "html.format.wrapLineLength": 0,
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
 }
