--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "start": "npm run dev",
         "dev": "webpack-dev-server",
         "build": "webpack --mode=production",
-        "deploy": "npm run build & deploy.cmd"
+        "deploy": "npm run build & deploy.cmd",
+        "serve": "next dev -p 1000",
+        "ts-watch": "tsc --watch --noEmit --incremental --preserveWatchOutput --pretty",
+        "rdev": "concurrently -n NEXT,TS -c magenta,cyan \"yarn serve\" \"yarn ts-watch\""
     },
     "repository": {},
     "keywords": [],
@@ -15,15 +18,19 @@
     "license": "ISC",
     "devDependencies": {
         "@types/jquery": "^3.5.14",
+        "@types/react": "^18.0.21",
         "@types/webfontloader": "^1.6.34",
+        "autoprefixer": "^10.4.12",
         "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.7.1",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.6.0",
+        "postcss": "^8.4.17",
         "sass": "^1.50.0",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.1",
+        "tailwindcss": "^3.1.8",
         "ts-loader": "^9.2.8",
         "typescript": "^4.6.3",
         "webpack": "^5.72.0",
@@ -31,6 +38,9 @@
         "webpack-dev-server": "^4.8.1"
     },
     "dependencies": {
-        "d3": "^7.4.4"
+        "@heroicons/react": "^2.0.12",
+        "next": "^12.3.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
