--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "ESNext",
+    "target": "es5",
+    "module": "esnext",
     "moduleResolution": "node",
-    "noResolve": false,
-    "noImplicitAny": false,
-    "sourceMap": true,
-    "baseUrl": ".",
-    "preserveConstEnums": true,
-    "allowSyntheticDefaultImports": true,
-    "lib": [
-      "dom",
-      "es6",
-      "WebWorker"
-    ],
-    "rootDir": "."
-  }
+    "baseUrl": "../",
+    "lib": ["dom", "dom.iterable", "esnext", "WebWorker"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "strict": false
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../common/**/*.ts"],
+  "exclude": ["node_modules"]
 }
