--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "name": "moo-rules",
     "version": "0.0.1",
     "description": "A digitized version of the ancient scrolls for the game of Moo.",
+    "private": true,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "npm run dev",
         "dev": "webpack-dev-server",
-        "build": "webpack --mode=production",
+        "build": "next build && next export",
         "deploy": "npm run build & deploy.cmd",
         "serve": "next dev -p 1000",
         "ts-watch": "tsc --watch --noEmit --incremental --preserveWatchOutput --pretty",
@@ -30,7 +31,6 @@
         "sass": "^1.50.0",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.1",
-        "tailwindcss": "^3.1.8",
         "ts-loader": "^9.2.8",
         "typescript": "^4.6.3",
         "webpack": "^5.72.0",
@@ -41,6 +41,7 @@
         "@heroicons/react": "^2.0.12",
         "next": "^12.3.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "tailwindcss": "^3.1.8"
     }
 }
