--- a/package.json
+++ b/package.json
@@ -4,44 +4,29 @@
     "description": "A digitized version of the ancient scrolls for the game of Moo.",
     "private": true,
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "npm run dev",
-        "dev": "webpack-dev-server",
-        "build": "next build && next export",
-        "deploy": "npm run build & deploy.cmd",
+        "dev": "concurrently -n NEXT,TS -c magenta,cyan \"yarn serve\" \"yarn ts-watch\"",
         "serve": "next dev -p 1000",
         "ts-watch": "tsc --watch --noEmit --incremental --preserveWatchOutput --pretty",
-        "rdev": "concurrently -n NEXT,TS -c magenta,cyan \"yarn serve\" \"yarn ts-watch\""
+        "build": "next build && next export",
+        "deploy": "npm run build & deploy.cmd"
     },
     "repository": {},
     "keywords": [],
     "author": "Phil Bladen",
     "license": "ISC",
     "devDependencies": {
-        "@types/jquery": "^3.5.14",
+        "@types/node": "18.8.3",
         "@types/react": "^18.0.21",
-        "@types/webfontloader": "^1.6.34",
         "autoprefixer": "^10.4.12",
-        "copy-webpack-plugin": "^10.2.4",
-        "css-loader": "^6.7.1",
-        "html-loader": "^3.1.0",
-        "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.6.0",
         "postcss": "^8.4.17",
         "sass": "^1.50.0",
-        "sass-loader": "^12.6.0",
-        "style-loader": "^3.3.1",
-        "ts-loader": "^9.2.8",
-        "typescript": "^4.6.3",
-        "webpack": "^5.72.0",
-        "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.8.1"
+        "tailwindcss": "^3.1.8",
+        "typescript": "^4.6.3"
     },
     "dependencies": {
         "@heroicons/react": "^2.0.12",
         "next": "^12.3.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss": "^3.1.8"
+        "react-dom": "^18.2.0"
     }
 }
