Added initial prototype of filter pop-out menu on moves page.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
         "editor.defaultFormatter": "vscode.html-language-features"
     },
     "editor.formatOnSave": true,
+    "css.lint.unknownAtRules": "ignore"
 }
